# epicure

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: eoicure_linting_security.yaml  epicure_ci.yml  epicure_release.yml  epicure_tests.yml
docs/: modules.rst
epicure/file_handling/: json.py
epicure/input/: question.py
requirements/: development.in  development.txt  test.txt
