[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "epicure-utils"
version = "0.0.2"
description = "A common utils Python library. Don't write that one little function again!"
authors = [{name = "Patilla Code", email = "patillacode@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/production.txt"] }
optional-dependencies.test = { file = ["requirements/development.txt", "requirements/test.txt"] }

[tool.pytest.ini_options]
pythonpath = ["."]

[project.urls]
homepage = "https://github.com/patillacode/epicure"
repository = "https://github.com/patillacode/epicure"


